@@ -72,6 +72,8 @@ FIXES
 
  * Synchronous events implemented also for processes
 
+ * Active task can be removed
+
 
 
 
